IMPALA-9449: handle invalid compressed length for block

Change-Id: I906584375a41362206b3055bd7dc5b5800111793